配置文件调整